--- a/_includes/home/features.html
+++ b/_includes/home/features.html
@@ -1,6 +1,6 @@
 <section id="features" class="pos-rel">
    <div class="d-flx al-i-c j-c-fe maxwidth-xl mx-auto">
-        <div class="features-img show-slaptop">
+        <div class="features-img show-largeup">
             <img src="{{ site.url }}/uploads/features.svg" alt="">
         </div>
         <div class="features-content wrapper will-grow negate-bottom">
