--- a/_includes/shell/footer.html
+++ b/_includes/shell/footer.html
@@ -2,7 +2,7 @@
     <div class="maxwidth-xl mx-auto footer-content">
         <div class="footer-branding">
             {%- include tools/icons.html icon="logo-alt-gray" -%}
-            <p class="primarytext co-primary-gray copyright m-0 suffix is-wider">Copyright © 2018 Eyowo Integrated Payments Limited. All rights reserved. <a href="{{ site.url }}/legal/">Legal</a></p>
+            <p class="primarytext co-primary-gray copyright m-0 suffix is-even-wider fw-bold">© 2018 Eyowo Integrated Payments Ltd. All rights reserved. <a href="{{ site.url }}/legal/">Legal</a></p>
         </div>
         <ul class="m-0 none d-flx al-i-c">
             {%- for entry in site.data.options.social_media -%}
