--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -6,6 +6,8 @@
 
 html
     font-size:              $basefont
+    max-width:              $maxwidth-xxl
+    margin:                 0 auto
 
 *, *::before, *::after
     box-sizing:             border-box
