--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -41,31 +41,29 @@ $borderline:        1px solid #EBEBF2
 $preferredradius:   3px
 $desiredduration:   0.24s
 
-// Measures & Widths
-$maxwidth-xl:       1280px
-$maxwidth-lt:       992px
-$maxwidth-tb:       772px
-$maxwidth-sm:       576px
-$maxwidth-xs:       360px
 
-$maxwidth-500:      500px
+// Measures
+$maxwidth-xxl:          1440px
+$maxwidth-xl:           1280px
+$maxwidth-lg:           1192px
+$maxwidth-lt:           992px
+$maxwidth-tb:           768px
+$maxwidth-md:           656px
+$maxwidth-sm:           544px
+$maxwidth-xs:           360px
 
-$space-xxs:         0.24rem
-$space-xs:          0.48rem
-$space-sm:          1.56rem
-$space-md:          2.96rem
-$space-lg:          3.72rem
-$space-xl:          4.64rem
-$space:             1.08rem
-
-$fixedheight-36:    36px
-$fixedheight-30:    30px
+$space-xxs:             0.32rem
+$space-xs:              0.64rem
+$space-sm:              1.56rem
+$space-md:              2.64rem
+$space-lg:              3.56rem
+$space-xl:              4.64rem
+$space:                 1.24rem
 
 // Media Queries
-$xsmallup:          "only screen and (min-width: 368px)"
-$smallup:           "only screen and (min-width: 576px)"
-$mediumup:          "only screen and (min-width: 768px)"
-$mediumdown:        "only screen and (max-width: 767px)"
-$largeup:           "only screen and (min-width: 992px)"
-$slaptop:           "only screen and (min-width: 1024px)"
-$xlargeup:          "only screen and (min-width: 1280px)"
+$xsmallup:              "only screen and (min-width: 368px)"
+$smallup:               "only screen and (min-width: 544px)"
+$mediumup:              "only screen and (min-width: 672px)"
+$mediumdown:            "only screen and (max-width: 671px)"
+$largeup:               "only screen and (min-width: 992px)"
+$xlargeup:              "only screen and (min-width: 1280px)"
