--- a/_sass/layouts/header.sass
+++ b/_sass/layouts/header.sass
@@ -1,4 +1,4 @@
-.home-header
+.header
     @media #{ $largeup}
         height: 100vh
     .headline
@@ -43,9 +43,13 @@
         @media #{ $largeup}
             max-width: $maxwidth-xs
 
-
+.appview-logo
+    position: absolute
+    width: 345px
+    top: -30px
+    right: 0
 .webview
-    width: 570px
+    width: 520px
     object-fit: contain
 .feature-phone
     position: absolute
@@ -61,11 +65,13 @@
     border-radius: 40px
     padding: 12px
     position: relative
-    height: 538px
+    height: 530px
     width: 260px
     @media #{ $largeup}
-        height: 538px
-        width: 260px
+        width:  245px
+        height: 500px
+    &.mobileview
+        top: 0 
     .iphone_notch
         background: #ffffff
         border-bottom-left-radius: 16px
@@ -124,7 +130,8 @@
         overflow: hidden
         box-shadow: inset 0 1px 2px rgba(0,0,0,.05)
     video.iphone_video 
-            border-radius: 26px
-            display: block
-            width: 100%
+        border-radius: 26px
+        display: block
+        width: 100%
+        height: 100%
         
