--- a/_includes/home/header.html
+++ b/_includes/home/header.html
@@ -1,4 +1,4 @@
-<section class="pos-rel home-header">
+<section class="pos-rel header">
     <div class="absolute-zero">
         <div class="absolute-zero header-bg-logo">
             {%- include tools/icons.html icon="header-bg-logo" -%}
@@ -12,18 +12,21 @@
             <p class="nanotext lh-1-3h pt-1 m-0">Send, receive, spend money and pay bills with just your phone number. Carry out all your transactions with or without a bank account. </p>
             {% include components/get-app.html %}
 
-            <div class="iphoneview mt-3 hide-largeup">
-                <div class="iphone__screen">
-                        <video class="iphone_video" autoplay="" loop="">
-                            <source type="video/mp4" src="{{ site.url }}/uploads/header/eyw.mp4">
-                        </video>
-                    <div class="iphone__screen-shadow"></div>
+            <div class="wrapper will-grow negate-bottom">
+                <div class="iphoneview hide-largeup mobileview">
+                    <div class="iphone__screen">
+                            <video class="iphone_video" autoplay="" loop="">
+                                <source type="video/mp4" src="{{ site.url }}/uploads/header/eyw.mp4">
+                            </video>
+                        <div class="iphone__screen-shadow"></div>
+                    </div>
+                    <div class="iphone_notch"></div>
                 </div>
-                <div class="iphone_notch"></div>
             </div>
         </div>
         
-        <div class="show-largeup absolute-middle-right width-50-pc hero-header">
+        <div class="show-largeup absolute-middle-right width-50-pc">
+            <img src="{{ site.url }}/uploads/header/header-appview-logo.svg" alt="" class="appview-logo">
             <img src="{{ site.url }}/uploads/header/webview.svg" alt="" class="webview absolute-middle-right">
             <div class="iphoneview">
                 <div class="iphone__screen">
