--- a/_sass/modules/experience-banner.sass
+++ b/_sass/modules/experience-banner.sass
@@ -12,6 +12,10 @@
     display: flex
     flex-direction: column
     justify-content: center
+    &.home-layout
+        max-height: 540px
+        @media #{ $largeup}
+            max-height: 740px
     @media #{ $largeup}
         max-width: $maxwidth-lt
         padding-bottom: 0
@@ -22,6 +26,7 @@
     height: 100%
         
 .content-wrapper
+    overflow: hidden
     @media #{ $largeup}
         display: flex
         align-items: center
@@ -39,15 +44,22 @@
         align-items: unset
 
 .get-app-cta
+    margin: 0
     .google-play svg
-        height: 38px
+        height: 40px
+        width: 120px
     .app-store svg
-        height: 39px
+        height: 40px
+        width: 120px
 
 .banner-image
     @media #{ $largeup}
-        width: 50%
-
+        width: 55%
+        &.is-business
+            width: 38%
+            position: absolute
+            right: 0
+            bottom: 0
 .input-wrap
     display: flex
     .phone-number-input
