--- a/_sass/pages/home.sass
+++ b/_sass/pages/home.sass
@@ -25,6 +25,7 @@
             border-radius: 10px
             display: flex
             justify-content: center
+            align-items: center
 .features-img
     width: 600px
     position: absolute
@@ -40,36 +41,26 @@
 
 
 .why-section
-    min-height: 700px
-    margin-top: 6rem
-.glide__slide
-    // width:  400px
-    
+    min-height: 400px
+    margin-top: 5rem
+    @media #{ $smallup}
+        min-height: 700px
+        margin-top: 15rem
+    .why-content,
+    .why-slider
+        align-self: center
 
-
-        
-// .swiper-pagination
-//     color: $primarycolor
-//     display: inline-flex
-//     position: static 
-//     transform: none
-//     z-index: 2
-//     text-align: unset
-//     margin-left: 15px
-
-// .swiper-pagination-bullet
-//     width: 33px
-//     height: 2px
-//     display: inline-block
-//     background: rgba(196, 112, 46, 0.51)
-//     opacity: 1
-//     border-radius: $preferredradius
-
-// .swiper-pagination-bullet-active
-//     opacity: 1
-//     background: $primarycolor
-
-// .swiper-container-horizontal 
-//     & > .swiper-pagination-bullets
-//         position: absolute
-//         bottom: 0
+.why-slider-grid
+    display: grid
+    grid-gap: $space
+    grid-template-columns: repeat(2, 1fr)
+    grid-template-rows: repeat(4, 1fr)
+    li:nth-child(3n + 1)
+        grid-row-start: 2
+        grid-row-end: span 2
+    li:nth-child(3n + 2)
+        grid-row-start: 1
+        grid-row-end: span 2
+    li:nth-child(3n + 3)
+        grid-row-start: 3
+        grid-row-end: span 2
